--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="inventory.html" class="nav-link">
                             <i class="fas fa-boxes"></i>
                             <span>Inventory</span>
                         </a>
