--- a/index.html
+++ b/index.html
@@ -46,29 +46,15 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="findings.html" class="nav-link">
+                            <i class="fas fa-search"></i>
+                            <span>Findings</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#" class="nav-link">
                             <i class="fas fa-exclamation-triangle"></i>
                             <span>Incidents</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="fas fa-cube"></i>
-                            <span>Images & Functions</span>
-                            <i class="fas fa-chevron-right nav-arrow"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="fas fa-server"></i>
-                            <span>Workloads</span>
-                            <i class="fas fa-chevron-right nav-arrow"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">
-                            <i class="fas fa-chart-bar"></i>
-                            <span>Security Reports</span>
                         </a>
                     </li>
                     <li class="nav-item active">
